src/sfdc/base/main/default/objects/Contact/fields/B2C_Company_Name__c.field-meta.xml
<CustomField>
    <fullName>B2C_Company_Name__c</fullName>
    <description>... represents the company name associated to a given B2C Commerce Customer Profile.</description>
    <inlineHelpText>... represents the company name associated to a given B2C Commerce Customer Profile.</inlineHelpText>
    <label>B2C Company Name</label>
    <length>250</length>
    <type>Text</type>
</CustomField>