src/sfdc/base/main/default/objects/Contact/fields/B2C_CustomerList__c.field-meta.xml
<CustomField>
    <fullName>B2C_CustomerList__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>... represents the B2C Commerce CustomerList the customer profile is associated to.</description>
    <inlineHelpText>... represents the B2C Commerce CustomerList the customer profile is associated to.</inlineHelpText>
    <label>B2C CustomerList</label>
    <referenceTo>B2C_CustomerList__c</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>