src/sfdc/base/main/default/objects/Contact/fields/B2C_Is_Enabled__c.field-meta.xml
<CustomField>
    <fullName>B2C_Is_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>... describes if a given B2C Commerce customer profile is active and enabled to interact with storefronts.</description>
    <inlineHelpText>... describes if a given B2C Commerce customer profile is active and enabled to interact with storefronts.</inlineHelpText>
    <label>B2C Is Enabled</label>
    <type>Checkbox</type>
</CustomField>