src/sfdc/base/main/default/objects/Contact/fields/B2C_Is_Locked__c.field-meta.xml
<CustomField>
    <fullName>B2C_Is_Locked__c</fullName>
    <defaultValue>false</defaultValue>
    <description>... describes if the current B2C Commerce Customer Profile is locked-out and being prevented from logging into the storefront.</description>
    <inlineHelpText>... describes if the current B2C Commerce Customer Profile is locked-out and being prevented from logging into the storefront.</inlineHelpText>
    <label>B2C Is Locked</label>
    <type>Checkbox</type>
</CustomField>