src/sfdc/base/main/default/objects/Contact/fields/B2C_Site_ID__c.field-meta.xml
<CustomField>
    <fullName>B2C_Site_ID__c</fullName>
    <description>... represents the B2C Commerce storefront identifier associated to a given contact.</description>
    <inlineHelpText>... represents the B2C Commerce storefront identifier associated to a given contact.</inlineHelpText>
    <label>B2C Site ID</label>
    <length>250</length>
    <type>Text</type>
</CustomField>