src/sfdc/base/main/default/objects/Contact/fields/B2C_Title__c.field-meta.xml
<CustomField>
    <fullName>B2C_Title__c</fullName>
    <description>... represents the optional title associated to a B2C Commerce customer profile (ex. professional title).</description>
    <inlineHelpText>... represents the optional title associated to a B2C Commerce customer profile (ex. professional title).</inlineHelpText>
    <label>B2C Title</label>
    <length>250</length>
    <type>Text</type>
</CustomField>