src/sfdc/base/main/default/objects/Contact/fields/B2C_UserName__c.field-meta.xml
<CustomField>
    <fullName>B2C_UserName__c</fullName>
    <description>... represents the B2C Commerce customer profile username mapped to a given Service Cloud Contact.</description>
    <inlineHelpText>... represents the B2C Commerce customer profile username mapped to a given Service Cloud Contact.</inlineHelpText>
    <label>B2C UserName</label>
    <length>250</length>
    <type>Text</type>
</CustomField>