src/sfdc/base/main/default/objects/Contact/fields/Last_B2C_Commerce_Update_Processed__c.field-meta.xml
<CustomField>
    <fullName>Last_B2C_Commerce_Update_Processed__c</fullName>
    <description>... represents the last date that an update from B2C Commerce was made to a given Contact record.</description>
    <inlineHelpText>... represents the last date that an update from B2C Commerce was made to a given Contact record.</inlineHelpText>
    <label>Last B2C Commerce Update Processed</label>
    <type>DateTime</type>
</CustomField>