src/sfdc/base/main/default/objects/Contact/listViews/B2CCommerce_CustomerProfiles.listView-meta.xml
<ListView>
    <fullName>B2CCommerce_CustomerProfiles</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>FULL_NAME</columns>
    <columns>B2C_CustomerList__c</columns>
    <columns>B2C_Customer_No__c</columns>
    <columns>B2C_Customer_ID__c</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>Total_Updates_From_B2C_Commerce__c</columns>
    <columns>Total_Updates_to_B2C_Commerce__c</columns>
    <columns>CONTACT.LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>B2C_CustomerList__c</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>B2C_Customer_No__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>B2C Commerce Customer Profiles</label>
</ListView>